# latex-fast-preview

./: .clang-format  .gitignore  CMakeLists.txt
src/: common.h  injected.cpp  main.cpp
test/: content.tex  main.tex  preamble.tex
